--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
+        "*.embeddedhtml": "html",
         "string.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "socket.h": "c"
     }
 }
